...
      >
        <Ionicons
          name={semSom ? 'volume-mute' : 'volume-high'}
          size={16}
          color="#fff"
        />
        <Text style={styles.somTexto}>{semSom ? 'Som' : 'Mudo'}</Text>
      </TouchableOpacity>
    </View>
  );
}

const styles = StyleSheet.create({
...
