...
    >
      <Tab.Screen
        name="FeedTab"
        component={FeedStack}
        options={{
          headerShown: false,
          title: 'Início',
          tabBarIcon: ({ color, size }) => (
            <Ionicons name="home-outline" size={size} color={color} />
          ),
        }}
      />
      <Tab.Screen
        name="OSTab"
        component={OsStack}
        options={{
          headerShown: false,
          title: 'Serviços',
          tabBarIcon: ({ color, size }) => (
            <Ionicons name="clipboard-outline" size={size} color={color} />
          ),
        }}
      />
      {!isPartner && (
...
